Añadidos formatos personalizados para las facturas, se mostrará si el pedido es nuevo, está enviado o ya finalizó

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -26,3 +26,9 @@ layoutCountryEngland=England
 
 # Data Binding Content 
 productListTitle = Productos 
+
+# Invoice List
+invoiceListTitle=Invoices
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
