--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -26,3 +26,9 @@ layoutCountryEngland=Inglaterra
 
 # Data Binding Content 
 productListTitle = Productos 
+
+# Invoice List
+invoiceListTitle=Facturas
+invoiceStatusA=Nuevo
+invoiceStatusB=En progreso
+invoiceStatusC=Completado
