Añadido vista desplegable en invoices

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -32,3 +32,10 @@ invoiceListTitle=Invoices
 invoiceStatusA=New
 invoiceStatusB=In Progress
 invoiceStatusC=Done
+
+# Data Binding Details Panel
+productDetailPanelHeader=Product Details
+productDetailPanelID=Product ID
+productDetailPanelName=Product Name
+productDetailPanelPrice=Price
+productDetailPanelDescription=Description	
