--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -32,3 +32,10 @@ invoiceListTitle=Facturas
 invoiceStatusA=Nuevo
 invoiceStatusB=En progreso
 invoiceStatusC=Completado
+
+# Data Binding Details Panel
+productDetailPanelHeader=Detalles del producto
+productDetailPanelID=ID del producto
+productDetailPanelName=Nombre del producto 
+productDetailPanelPrice=Precio 
+productDetailPanelDescription=Descripción	
