Añadiendo rutas con navegación

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,6 +1,8 @@
 #APP
+homePageTitle=First App
 appDescription=First App
 appTitle= Hello
+detailPageTitle=Walkthrough - Details
 
 # Hello Panel 
 showHelloButtonText=Say Hello 
@@ -39,3 +41,4 @@ productDetailPanelID=Product ID
 productDetailPanelName=Product Name
 productDetailPanelPrice=Price
 productDetailPanelDescription=Description	
+
