--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -1,6 +1,8 @@
 #APP
+homePageTitle=Primera aplicación
 appDescription=Primera prueba de descripcion
 appTitle= Hola
+detailPageTitle=Recorrido rápido - Detalles
 
 # Hello Panel 
 showHelloButtonText=Di Hola
