Añadidos mas paises en form

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -25,6 +25,9 @@ layoutDraftButton=Save Draft
 layoutCountryGermany=Germany 
 layoutCountryUSA=USA 
 layoutCountryEngland=England 
+layoutCountrySpainy=Spain 
+layoutCountryFrance=France
+layoutCountryItaly=Italy 
 
 # Data Binding Content 
 productListTitle = Productos 
