--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -25,6 +25,9 @@ layoutDraftButton=Guardar en borradores
 layoutCountryGermany=Alemania
 layoutCountryUSA=Estados Unidos
 layoutCountryEngland=Inglaterra
+layoutCountrySpain=España
+layoutCountryFrance=Francia
+layoutCountryItaly=Italia
 
 # Data Binding Content 
 productListTitle = Productos 
