Añadidos controles personalizados

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,6 +3,7 @@ homePageTitle=First App
 appDescription=First App
 appTitle= Hello
 detailPageTitle=Walkthrough - Details
+ratingConfirmation=You have rated this product with {0} stars
 
 # Hello Panel 
 showHelloButtonText=Say Hello 
@@ -45,3 +46,8 @@ productDetailPanelName=Product Name
 productDetailPanelPrice=Price
 productDetailPanelDescription=Description	
 
+# Product Rating
+productRatingLabelInitial=Please rate this product
+productRatingLabelIndicator=Your rating: {0} out of {1}
+productRatingLabelFinal=Thank you for your rating!
+productRatingButton=Rate
