--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -3,6 +3,7 @@ homePageTitle=Primera aplicación
 appDescription=Primera prueba de descripcion
 appTitle= Hola
 detailPageTitle=Recorrido rápido - Detalles
+ratingConfirmation=Has votado este producto con {0} estrellas.
 
 # Hello Panel 
 showHelloButtonText=Di Hola
@@ -44,3 +45,9 @@ productDetailPanelID=ID del producto
 productDetailPanelName=Nombre del producto 
 productDetailPanelPrice=Precio 
 productDetailPanelDescription=Descripción	
+
+# Product Rating
+productRatingLabelInitial=Por favor vota este producto
+productRatingLabelIndicator=Tu puntuación: {0} de {1}
+productRatingLabelFinal=Gracias por votar
+productRatingButton=Vota
