Copia seguridad, antes de cambios en recuperación de los JSON

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -38,6 +38,11 @@ invoiceListTitle=Invoices
 invoiceStatusA=New
 invoiceStatusB=In Progress
 invoiceStatusC=Done
+columnQuantity=Quantity
+columnName=Name
+columnSupplier=Supplier
+columnStatus=Status
+columnPrice=Price
 
 # Data Binding Details Panel
 productDetailPanelHeader=Product Details
@@ -45,6 +50,7 @@ productDetailPanelID=Product ID
 productDetailPanelName=Product Name
 productDetailPanelPrice=Price
 productDetailPanelDescription=Description	
+productDetailPanelDate=Order date
 
 # Product Rating
 productRatingLabelInitial=Please rate this product
