--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -38,13 +38,19 @@ invoiceListTitle=Facturas
 invoiceStatusA=Nuevo
 invoiceStatusB=En progreso
 invoiceStatusC=Completado
+columnQuantity=Cantidad
+columnName=Nombre
+columnSupplier=Proveedor 
+columnStatus=Estatus
+columnPrice=Precio
 
 # Data Binding Details Panel
 productDetailPanelHeader=Detalles del producto
 productDetailPanelID=ID del producto
 productDetailPanelName=Nombre del producto 
 productDetailPanelPrice=Precio 
-productDetailPanelDescription=Descripción	
+productDetailPanelDescription=Descripción
+productDetailPanelDate=Fecha de pedido
 
 # Product Rating
 productRatingLabelInitial=Por favor vota este producto
